Evan Richards end of week 10  code

--- a/public/css/project.css
+++ b/public/css/project.css
@@ -54,3 +54,10 @@ button {
 .selected_button{
     border: 3px solid black;
 }
+
+.error-messages{
+border: 3px;
+border-style: solid;
+border-color: red;
+color: red;
+}
