--- a/views/profile.html
+++ b/views/profile.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <main>
-      <h1>Your Profile</h1>
+      <h1>Your Profile</h1>      
       <form>
+        <div id = "error-messages" id = "error-messages-hidden"></div>
+          <ul>
+           <li>email is not valid</li> 
+           <li></li>
+           <li>Name fields cannot be empty</li>
+           <li>passwords are not matching</li>
+          </ul>
+        </div>
+                
         <div>
           <label>Name</label
           ><input id="first_name" type="text" placeholder="First Name" />
